mkdocs 3th comment
增加2020招聘信息，并压缩了大图片的尺寸

--- a/about/index.html
+++ b/about/index.html
@@ -373,9 +373,11 @@ MathJax = {
 <p><img alt="home_classifier" src="../img/Home/home_classifier.png" /></p>
 <h1 id="_1"><strong>关于与联系</strong></h1>
 <hr />
-<h2 id="_2">关于解译星球</h2>
-<p><strong>解译星球</strong>是深圳市魔方卫星科技有限公司卫星系统应用部门的一个遥感数据分析与应用研发项目，旨在构建行星级空间数据分析与应用平台，推进智慧遥感在商业市场、地球科学以及大尺度地理信息空间领域的广泛应用。</p>
-<h2 id="_3">联系我们</h2>
+<h2 id="_2"><strong>关于解译星球</strong></h2>
+<hr />
+<p><a href="IntPlanet.mgcsat.com"><strong>解译星球</strong></a>是深圳市魔方卫星科技有限公司卫星系统应用部门的一个遥感数据分析与应用研发项目，旨在构建行星级空间数据分析与应用平台，推进智慧遥感在商业市场、地球科学以及大尺度地理信息空间领域的广泛应用。</p>
+<h2 id="_3"><strong>联系我们</strong></h2>
+<hr />
 <table>
 <thead>
 <tr>
@@ -386,7 +388,11 @@ MathJax = {
 <tbody>
 <tr>
 <td align="center">电子邮箱</td>
-<td align="left">liaox@mgcsat.com</td>
+<td align="left"><a href="liaox@mgcsat.com">liaox@mgcsat.com</a></td>
+</tr>
+<tr>
+<td align="center">手机号码</td>
+<td align="left">+86-13590106297</td>
 </tr>
 <tr>
 <td align="center">通讯地址</td>
