--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@ MathJax = {
 </script>
 
 <p><img alt="home_classifier" src="img/Home/home_classifier.png" /></p>
-<h1 id="_1"><strong>欢迎来到魔方卫星解译星球项目</strong></h1>
+<h1 id="_1"><strong>欢迎来到魔方卫星解译星球项目！</strong></h1>
 <hr />
 <blockquote>
 <p><strong>智慧遥感，解译星球，构建行星级空间数据分析与应用平台。</strong></p>
