修改图像剧中
修改图像剧中

--- a/RS/Landsat_100_million_downloads/index.html
+++ b/RS/Landsat_100_million_downloads/index.html
@@ -892,7 +892,7 @@
 <hr />
 <p>卫星遥感是一个令人着迷的科学领域，不仅可以从一景景影像中观赏我们赖以生存星球的美丽，还可以揭示人们对自然景观的破坏与改造，给出人与自然和谐共处的建设性意见。</p>
 <p>USGS的EROS项目给世界带来了惊喜，十多年来持续为用户提供近50年Landsat多光谱影像，从最初Landsat 1的4谱段至Landsat 7的7谱段，再到现役Landsat 8的11谱段，Landsat丰富的16天重访周期影像数据源造福了数以万计的科研人员。而Landsat 9也将在不久的将来发射入轨，期待EROS在卫星遥感领域创造更多奇迹！</p>
-<p><img alt="Landsat系列卫星" src="https://imgkr.cn-bj.ufileos.com/3c743677-3c0e-4739-bd62-b951cc9b04e5.png" /></p>
+<p><center><img alt="Landsat系列卫星" src="https://imgkr.cn-bj.ufileos.com/3c743677-3c0e-4739-bd62-b951cc9b04e5.png" /></center></p>
 <blockquote>
 <p><strong>图注</strong>：Landsat系列卫星</p>
 </blockquote>
